feat: cleanup sops secrets

--- a/kubernetes/main/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/main/flux/vars/cluster-secrets.sops.yaml
@@ -9,30 +9,19 @@ stringData:
     SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:2ATU/FJzrTT9UYmJ8TNXlztdAKmb1B03nXZ92oQ3DUqB+soT,iv:fqCluZe9pDMF8/amCTzttRWGcbiUUYjE8pbRiFGA8KI=,tag:1TsssKRYBJHKG91oNFyDZQ==,type:str]
     CLUSTER_SECRET_CLOUDFLARE_ACCOUNT_ID: ENC[AES256_GCM,data:YG5mBkAmzwP+I5V01uM1VdLcYyK7fXxg0p74UtlBKyo=,iv:9IiCQaYAyNRPyYpk8x1x/Gsp9WVDdVPT1AnCn63rbo4=,tag:Smrd8t4eAI+kDQh0Dp/StQ==,type:str]
     SECRET_DOMAIN: ENC[AES256_GCM,data:Ulc4QMnUa3g=,iv:wAJV0i1bjV+/grFguyaSE45+SXemSvmBbq5UIkeEO0Y=,tag:ae5kL99lzMxi8X1fTaTQLw==,type:str]
-    INTERNAL_DOMAIN: ENC[AES256_GCM,data:NEC7Ou8ulNW1,iv:8q0/XQjYxaAbuq+h2NB2YhbV1/yYp0icm1wi3qjKJ1I=,tag:qfES5G0ilYFDv0eonIacog==,type:str]
-    K8S_GW: ENC[AES256_GCM,data:0Pi55d/PdmI/+Q==,iv:QItmwDKTvT77zFxt5vy0NjeyICiELpdKF6u1jTwbnJQ=,tag:muWlDCNFtutLJ77VcamAMg==,type:str]
     SVC_NGINX_INTERNAL: ENC[AES256_GCM,data:TyCwPUZSIIF7Xg==,iv:0pUtIxWfTzL/l1Ksw9W7/OpEoosIoj+7RBj8OkjGDkM=,tag:4xPusaS1Nc72il6Zl1M0Og==,type:str]
     SVC_NGINX_EXTERNAL: ENC[AES256_GCM,data:yD0KlDNJdHu23A==,iv:ufbiRzNHpGdtc59e8xxEWC2s/6lfI7pKPA/WorZ+ui0=,tag:YJaK+m3aT5k9ARXCsauzWw==,type:str]
-    SVC_HOME_ASSISTANT_ADDR: ENC[AES256_GCM,data:z9n+0wLC8J47Kg==,iv:6QJcv16pdY+WRJOa1CUo9lLq6VIqFPAAiu3z6WO+ybQ=,tag:0j1AedVrOFtcwENcdcP/eQ==,type:str]
-    SVC_DB_ADDR: ENC[AES256_GCM,data:LHgrInSo9ZeT+w==,iv:gx8NMSbpdGLELTQwJ4eoKxKUtRMZBw8YYY9GCKM9Itg=,tag:fJIcdPJyVKcXsaEwtcJBMw==,type:str]
+    SVC_CPGO_ADDR: ENC[AES256_GCM,data:1ZEfa153U4NV5Q==,iv:Y6TDN76pCpEGLx03ZOO/0X6Z6rKuB+Kxk8/KXmS13K0=,tag:SwpJ/0qUK+j8Eq8lUuV2aQ==,type:str]
     SVC_PLEX_ADDR: ENC[AES256_GCM,data:1xZjw3xL5OJDQw==,iv:W8H53fUTHjDmhnyyZr+jcdUOakWdw3PRjVuLO/oDnBo=,tag:q/QaiVn1iQiFWOG0UOnIQw==,type:str]
     SVC_QBITTTORENT_ADDR: ENC[AES256_GCM,data:C1YY5DhkkwdO2A==,iv:SyHEO9JMb5ClhVm80Deq7desvahK8pYlWJtzb0g6pyY=,tag:GPFpWhdjJofBhd3khypV2A==,type:str]
-    SVC_SYNCTHING_ADDR: ENC[AES256_GCM,data:K2cuG+6tz5yXOw==,iv:sxnS7Trdr+tMFfD/1b+DeafewBxhQL5mrK4XX3LDFjU=,tag:6GOA3gDPgfKpCQo7aBOMyQ==,type:str]
     SVC_TAKOCRAFT_ADDR: ENC[AES256_GCM,data:FO629jc3FznVFQ==,iv:ggVburenvA0IOfOWr+RmGWUDntL369P4BjFMkJWEY8Y=,tag:MiX1TyqS1fahbZe93ETGwg==,type:str]
     SVC_PALWORLD_ADDR: ENC[AES256_GCM,data:sN51CLk0J5lueA==,iv:h/WiPB2ByiOjLLJwSegF0SXKklZazd81e0Qn//G8Wbk=,tag:Isi9IegNRCGbZ+nJfgC6Fw==,type:str]
     SVC_MINECRAFT_ADDR: ENC[AES256_GCM,data:f12BWnkvCdvjNg==,iv:gHfGEfHHQY9Rbu0uDls0sLdkje7UIQ4Mp+l5n33BJBA=,tag:NUo6kfMNYZQY9gRqZZN36g==,type:str]
-    SVC_CPGO_ADDR: ENC[AES256_GCM,data:E0L3ELsfW1F75A==,iv:u32QNF3p3yQRHozuZTeTD6PXCsZAjZNGaOOUUiNf9t0=,tag:4riVu19yOZSCsaCYolFj2A==,type:str]
-    KAPOWARR_API_KEY: ENC[AES256_GCM,data:lbn5uZWkeQWjcfKvLgTCFdUBM1gJbuAlcXIRGu70mgU=,iv:Et6EwBoK3zCMNFaoqeb4AY6lM4fsZDT6FWWKjgZpBic=,tag:NiSPGbJ4DfgLtBrLF+h0ow==,type:str]
     #ENC[AES256_GCM,data:NYqIEJwguAGYzknS,iv:U0oZbqHMObZ+Wvx8ryQE8dlR0SG26wsfYV3F2F67H+w=,tag:oCJYngN4jrdWrQug82W9vQ==,type:comment]
-    OLD_DOMAIN: ENC[AES256_GCM,data:d+5WLqHafQ==,iv:TAcsryX1gFXAY9dvN8omvn8/0pJNlSAB+dt3zBKFYGA=,tag:pN11Zm4LsL0AAxzLpSt0NA==,type:str]
     SECONDARY_DOMAIN: ENC[AES256_GCM,data:Azn6MDI8Np2VZDR7RQxjnQ3Msg==,iv:H2v9g/wSAZJB7/6RG4yfLZwB7QSVoG27sQVAuCiSmXs=,tag:KT6IyBzhJJ2oLZLW3pDXxw==,type:str]
     SECRET_NFS_DATA: ENC[AES256_GCM,data:RN+iTilzovBvmzeKmn8=,iv:9HOHKMlvI1tPJ0akJGHMYqrmhBWpHCthyhJEXuK/olk=,tag:NN30dHlw4WQVqulXe0/TUg==,type:str]
     SECRET_NFS_PAPERLESS: ENC[AES256_GCM,data:IjrRY8AXUBwvNUwl+2VK,iv:nlhXrqMAJ7Valrz8gheC7ZcznJTfNrnHS4uy75z/IC0=,tag:n0y2C1V9YpMNoHlcKNFuqQ==,type:str]
     SECRET_NFS_POSTGRES: ENC[AES256_GCM,data:WFy6mv7/bdAWgZQHSVdWeUWeCur7hJTRxg==,iv:wX8PrjuIWRQ+7ueXTbNwz4gRwHwbnURwWtNkVZfMDko=,tag:ymjKd/yhBcr+Hshq9msVDQ==,type:str]
-    SECRET_R2_ENDPONT: ENC[AES256_GCM,data:Q/N2hc0iRaXM1B1xr10FeFKVRnwJpGFuYvZfWnNnX9ya7utjaeHsCCn+zfINFgcP+gy22sW/yFg2,iv:HW4CQWzA5c3czMeOsBOzcRlJCojKARTkeMAy6G7My/k=,tag:QAOYWwpIvI/Hvil/mPeDrQ==,type:str]
-    MINIO_TOKEN: ENC[AES256_GCM,data:/vDZoJPzyl+yfBYtT6E36i5g2f+gAg9PNmY/ASdxelDMIWPE4QHUYdHPKVrOaEZkrjrPxAEs8cHvZW0p9SCVnTFXs3ZFYu+ZrK9IMd5lhJAwTAiuOb0kGg2CWkdvBTO8qOQn0E0khIgtthcVNJDSsyMV+Li1mJj5T+4uoD9Y2G5lsNYZxY8QhaxETp3K4w+NPrg0fbEAsZkB3iJDzEzeHCQ+H5U48+OUosEIw3WBtm8Epm/HoBKMsyjy3WQ9TteMJdbdhXSWqE4oDFWnlLYK,iv:fTEh63youm0aCYXpm00NtqPHU/5rZbM5JuTcqShfeSw=,tag:H1vH+9dlFqoaOH84i33GhQ==,type:str]
-    PI_IP: ENC[AES256_GCM,data:op0fYf7ebCy3/+Y=,iv:cPOstWehIehdqQWkRG0y35mZDN0RE7VERvW0NPgI/K4=,tag:ze2lCV0utiNWZxO3Fcx7/w==,type:str]
-    PI2_IP: ENC[AES256_GCM,data:r84QPcpVb84NqiI=,iv:zqOSpOrZDfpPEaJ3hYu1k1Y/5q1UmbYyQ9vPHoKZMZI=,tag:DOUDuVWPmvVa2fkkV1YFTw==,type:str]
     NAS_IP: ENC[AES256_GCM,data:T4L6Vz+TXi5nR2s=,iv:wXEHLHXWbN5cwXaAULpiTGxZgedZcgQ5rOZR/HMo84Y=,tag:TySPbqenLzRv39Ee11hh3w==,type:str]
     SVC_NUT_ADDR: ENC[AES256_GCM,data:wQejmnD1yHg9NTg=,iv:bRLR2FzSq6okzy+RaHtPjE4a2g6dYVwxcWPgO9FrhMA=,tag:a3N2mkNaIoe+kzphD8LeYA==,type:str]
     UNIFI_CONTROLLER_IP: ENC[AES256_GCM,data:mUqu2fOVg3LRTnM=,iv:RjjMuYZbMqxbkcTb9upDEzCG5P4A1iEj/cUaT68CTBY=,tag:SorUStnliZBvzIFkk/n/Og==,type:str]
@@ -54,8 +43,8 @@ sops:
             Mml3TDJwa2tWTUV3d0piVTFJSFhhOEEKr0FLybpRsnIlbT55No+/qolp2GVAB1yD
             yeGYjULaarqScUazhWSnuzDcRj4X0MX8UDV5lc4OsGba9ymVbywDbQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-08-07T19:43:11Z"
-    mac: ENC[AES256_GCM,data:X1z9nwgBwP8L/Ko+yooogmr5+yCZWt+mYvFwLMWX1QTmtci8VkllSutzIBvX5s+39+3zuAHJiY9yIZeCQZ+T5DfqqauGpZhQzrDETsZD47Eao2KQ7ZvpHBsmU4BVrAbnL0Nwh7+kyHDo435tq0RMbBrd4GCTpGphltJzlYb+25g=,iv:VlM6Etl+8Ue6GCC9EUHzxDma3GYnHVFZ44vF+bvGHBE=,tag:iIPX9ENYNkUPeDRObh8F/g==,type:str]
+    lastmodified: "2024-08-13T15:34:26Z"
+    mac: ENC[AES256_GCM,data:oZuU1R4jyhM5WGpjR1d3zWEs9NpSI+s9PXRiMVz0ekRUcuSAHrMOXa4vxlinPV9Bg+ZTJuG7B7gGA8zC2fcFCs34SVm3Xqv8iIcPz1uKLGX5gm4q4mVSwam4ZhsX5JZVr1GGpQ3KAMqdokgmEsdPJ8GloQ7dzkmpv7krixc9Rz0=,iv:Ux7hsU0pI8N1Xz1DUW8qQgPV0NszHjRhl4YnMfw4cEQ=,tag:pUOGfp/eVljY6NO/NiDUZA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.0
