--- a/kubernetes/main/apps/downloads/sonarr/app/kustomization.yaml
+++ b/kubernetes/main/apps/downloads/sonarr/app/kustomization.yaml
@@ -7,3 +7,11 @@ resources:
   - ./helmrelease.yaml
   - ./pvc.yaml
   - ../../../../templates/gatus/guarded
+configMapGenerator:
+  - name: sonarr-configmap
+    files:
+      - refresh-series.sh=./resources/refresh-series.sh
+generatorOptions:
+  disableNameSuffixHash: true
+  annotations:
+    kustomize.toolkit.fluxcd.io/substitute: disabled
