chore(kavita): switching repo and updating

--- a/kubernetes/main/apps/media/kavita/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/kavita/app/helmrelease.yaml
@@ -37,8 +37,8 @@ spec:
         containers:
           app:
             image:
-              repository: kizaing/kavita
-              tag: 0.7.8@sha256:48b3c2c07f90feb4641ddb791f96a1bf6e70a2b27da8c8b2ca0cc2c627b91d72
+              repository: ghcr.io/kareadita/kavita
+              tag: 0.8.2@sha256:3fbd326ca5bde61318200751289a289ef0040b4c842874814ffaf05107d91fe8
             env:
               TZ: ${TIMEZONE}
             resources:
