--- a/kubernetes/main/apps/observability/kromgo/app/helmrelease.yaml
+++ b/kubernetes/main/apps/observability/kromgo/app/helmrelease.yaml
@@ -35,16 +35,19 @@ spec:
               repository: ghcr.io/kashalls/kromgo
               tag: v0.4.0@sha256:526c7b84d290bcfc484a981a02a23e39210a97bb60f048fa26e55e34fe2a0478
             env:
-              PROMETHEUS_URL: http://thanos-query-frontend.observability.svc.cluster.local:10902
-              PORT: &port 80
+              PROMETHEUS_URL: http://prometheus-operated.observability.svc.cluster.local:9090
+              SERVER_HOST: 0.0.0.0
+              SERVER_PORT: &port 80
+              HEALTH_HOST: 0.0.0.0
+              HEALTH_PORT: &healthport 8888
             probes:
               liveness: &probes
                 enabled: true
                 custom: true
                 spec:
                   httpGet:
-                    path: /-/ready
-                    port: *port
+                    path: /readyz
+                    port: *healthport
                   initialDelaySeconds: 0
                   periodSeconds: 10
                   timeoutSeconds: 1
@@ -56,22 +59,21 @@ spec:
               capabilities: { drop: ["ALL"] }
             resources:
               requests:
-                cpu: 5m
+                cpu: 10m
               limits:
-                memory: 64M
-    defaultPodOptions:
-      securityContext:
-        runAsNonRoot: true
-        runAsUser: 65534
-        runAsGroup: 65534
-        seccompProfile: { type: RuntimeDefault }
-      topologySpreadConstraints:
-        - maxSkew: 1
-          topologyKey: kubernetes.io/hostname
-          whenUnsatisfiable: DoNotSchedule
-          labelSelector:
-            matchLabels:
-              app.kubernetes.io/name: *app
+                memory: 64Mi
+        pod:
+          securityContext:
+            runAsUser: 568
+            runAsGroup: 568
+            runAsNonRoot: true
+          topologySpreadConstraints:
+            - maxSkew: 1
+              topologyKey: kubernetes.io/hostname
+              whenUnsatisfiable: DoNotSchedule
+              labelSelector:
+                matchLabels:
+                  app.kubernetes.io/name: *app
     service:
       app:
         controller: *app
