--- a/kubernetes/main/apps/observability/kromgo/app/resources/config.yaml
+++ b/kubernetes/main/apps/observability/kromgo/app/resources/config.yaml
@@ -4,19 +4,24 @@ metrics:
   - name: talos_version
     query: node_os_info{cluster="main", name="Talos"}
     label: version_id
+    title: Talos
 
   - name: kubernetes_version
     query: kubernetes_build_info{cluster="main", service="kubernetes"}
     label: git_version
+    title: Kubernetes
 
   - name: cluster_node_count
     query: count(count by (node) (kube_node_status_condition{cluster="main", condition="Ready"}))
+    title: Nodes
 
   - name: cluster_pod_count
     query: sum(kube_pod_status_phase{cluster="main", phase="Running"})
+    title: Pods
 
   - name: cluster_cpu_usage
     query: round(avg(instance:node_cpu_utilisation:rate5m{cluster="main"}) * 100, 0.1)
+    title: CPU
     suffix: "%"
     colors:
       - { color: "green", min: 0, max: 35 }
@@ -25,6 +30,7 @@ metrics:
 
   - name: cluster_memory_usage
     query: round(sum(node_memory_MemTotal_bytes{cluster="main"} - node_memory_MemAvailable_bytes{cluster="main"}) / sum(node_memory_MemTotal_bytes{cluster="main"}) * 100, 0.1)
+    title: Memory
     suffix: "%"
     colors:
       - { color: green, min: 0, max: 35 }
@@ -33,6 +39,7 @@ metrics:
 
   - name: cluster_power_usage
     query: round((network_ups_tools_ups_load{server="server"} * 0.01 * 900) + ignoring(server, instance) (network_ups_tools_ups_load{server="network"} * 0.01 * 330)) # Server Rack Load % * 900W + Network Load % * 330W
+    title: Power
     suffix: "W"
     colors:
       - { color: "green", min: 0, max: 500 }
@@ -41,6 +48,7 @@ metrics:
 
   - name: cluster_age_days
     query: round((time() - min(kube_node_created{cluster="main"}) ) / 86400)
+    title: Age
     suffix: "d"
     colors:
       - { color: "green", min: 0, max: 180 }
@@ -49,6 +57,7 @@ metrics:
 
   - name: cluster_uptime_days
     query: round(avg(node_time_seconds{cluster="main"} - node_boot_time_seconds{cluster="main"}) / 86400)
+    title: Uptime
     suffix: "d"
     colors:
       - { color: "green", min: 0, max: 180 }
