fix(kromgo): update readme

--- a/kubernetes/main/apps/observability/kromgo/app/resources/config.yaml
+++ b/kubernetes/main/apps/observability/kromgo/app/resources/config.yaml
@@ -29,7 +29,7 @@ metrics:
       - { color: "red", min: 76, max: 9999 }
 
   - name: cluster_memory_usage
-    query: round(sum(node_memory_MemTotal_bytes - node_memory_MemAvailable_bytes) / sum(node_memory_MemTotal_bytes) * 100, 0.1
+    query: round(sum(node_memory_MemTotal_bytes - node_memory_MemAvailable_bytes) / sum(node_memory_MemTotal_bytes) * 100, 0.1)
     title: Memory
     suffix: "%"
     colors:
