feat: cleanup mc-router

--- a/kubernetes/main/apps/games/minecraft/create/dnsendpoint.yaml
+++ b/kubernetes/main/apps/games/minecraft/create/dnsendpoint.yaml
@@ -6,6 +6,6 @@ metadata:
   name: create
 spec:
   endpoints:
-    - dnsName: "ipv4.${SECONDARY_DOMAIN}"
+    - dnsName: "create.${SECRET_DOMAIN}"
       recordType: CNAME
-      targets: ["create.${SECRET_DOMAIN}"]
+      targets: ["ipv4.${SECRET_DOMAIN}"]
