--- a/kubernetes/main/apps/games/minecraft/takocraft/dnsendpoint.yaml
+++ b/kubernetes/main/apps/games/minecraft/takocraft/dnsendpoint.yaml
@@ -6,6 +6,6 @@ metadata:
   name: takocraft
 spec:
   endpoints:
-    - dnsName: "ipv4.${SECONDARY_DOMAIN}"
+    - dnsName: "takocraft.${SECRET_DOMAIN}"
       recordType: CNAME
-      targets: ["takocraft.${SECRET_DOMAIN}"]
+      targets: ["ipv4.${SECRET_DOMAIN}"]
