--- a/kubernetes/main/apps/games/minecraft/vibecraft/dnsendpoint.yaml
+++ b/kubernetes/main/apps/games/minecraft/vibecraft/dnsendpoint.yaml
@@ -6,6 +6,6 @@ metadata:
   name: vibecraft
 spec:
   endpoints:
-    - dnsName: "ipv4.${SECONDARY_DOMAIN}"
+    - dnsName: "vibecraft.${SECRET_DOMAIN}"
       recordType: CNAME
-      targets: ["vibecraft.${SECRET_DOMAIN}"]
+      targets: ["ipv4.${SECRET_DOMAIN}"]
