--- a/kubernetes/main/apps/games/minecraft/takocraft/helmrelease.yaml
+++ b/kubernetes/main/apps/games/minecraft/takocraft/helmrelease.yaml
@@ -73,7 +73,7 @@ spec:
         enabled: true
         existingClaim: *app
     serviceAnnotations:
-      mc-router.itzg.me/externalServerName: takocraft.${SECONDARY_DOMAIN}
+      mc-router.itzg.me/externalServerName: takocraft.${SECRET_DOMAIN}
     minecraftServer:
       eula: true
       version: 1.20.6
