--- a/kubernetes/main/apps/games/minecraft/vibecraft/helmrelease.yaml
+++ b/kubernetes/main/apps/games/minecraft/vibecraft/helmrelease.yaml
@@ -81,7 +81,7 @@ spec:
       #     subPath: config.yml
       #     readOnly: true
     serviceAnnotations:
-      mc-router.itzg.me/externalServerName: vibecraft.${SECONDARY_DOMAIN}
+      mc-router.itzg.me/externalServerName: vibecraft.${SECRET_DOMAIN}
     minecraftServer:
       eula: true
       version: 1.20.6
