feat: add dnsendpoints

--- a/kubernetes/main/apps/games/minecraft/create/helmrelease.yaml
+++ b/kubernetes/main/apps/games/minecraft/create/helmrelease.yaml
@@ -76,7 +76,7 @@ spec:
       mc-router.itzg.me/externalServerName: create.${SECRET_DOMAIN}
     minecraftServer:
       eula: true
-      version: 1.20.1
+      version: "1.20.1"
       type: FORGE
       overrideServerProperties: true
       jvmXXOpts: "-XX:MaxRAMPercentage=75"
