--- a/kubernetes/main/apps/games/minecraft/create/dnsendpoint.yaml
+++ b/kubernetes/main/apps/games/minecraft/create/dnsendpoint.yaml
@@ -4,8 +4,10 @@ apiVersion: externaldns.k8s.io/v1alpha1
 kind: DNSEndpoint
 metadata:
   name: create
+  annotations:
+    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
 spec:
   endpoints:
     - dnsName: "create.${SECRET_DOMAIN}"
       recordType: CNAME
-      targets: ["ipv4.${SECRET_DOMAIN}"]
+      targets: ["mc.${SECRET_DOMAIN}"]
