--- a/kubernetes/main/apps/games/minecraft/mc-router/dnsendpoint.yaml
+++ b/kubernetes/main/apps/games/minecraft/mc-router/dnsendpoint.yaml
@@ -3,11 +3,11 @@
 apiVersion: externaldns.k8s.io/v1alpha1
 kind: DNSEndpoint
 metadata:
-  name: takocraft
+  name: mc-router
   annotations:
-    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
+    external-dns.alpha.kubernetes.io/cloudflare-proxied: "disabled"
 spec:
   endpoints:
-    - dnsName: "takocraft.${SECRET_DOMAIN}"
+    - dnsName: "mc.${SECRET_DOMAIN}"
       recordType: CNAME
-      targets: ["mc.${SECRET_DOMAIN}"]
+      targets: ["ipv4.${SECRET_DOMAIN}"]
