--- a/kubernetes/main/apps/games/minecraft/takocraft/helmrelease.yaml
+++ b/kubernetes/main/apps/games/minecraft/takocraft/helmrelease.yaml
@@ -76,7 +76,7 @@ spec:
       mc-router.itzg.me/externalServerName: takocraft.${SECRET_DOMAIN}
     minecraftServer:
       eula: true
-      version: 1.21.1
+      version: "1.21"
       type: SPIGOT
       overrideServerProperties: true
       jvmXXOpts: "-XX:MaxRAMPercentage=75"
