--- a/kubernetes/main/apps/games/minecraft/vibecraft/helmrelease.yaml
+++ b/kubernetes/main/apps/games/minecraft/vibecraft/helmrelease.yaml
@@ -84,7 +84,7 @@ spec:
       mc-router.itzg.me/externalServerName: vibecraft.${SECRET_DOMAIN}
     minecraftServer:
       eula: true
-      version: 1.21.1
+      version: "1.21"
       type: SPIGOT
       overrideServerProperties: true
       jvmXXOpts: "-XX:MaxRAMPercentage=75"
