--- a/kubernetes/main/apps/games/minecraft/mc-router/helmrelease.yaml
+++ b/kubernetes/main/apps/games/minecraft/mc-router/helmrelease.yaml
@@ -28,3 +28,4 @@ spec:
         type: LoadBalancer
         annotations:
           io.cilium/lb-ipam-ips: ${SVC_MINECRAFT_ADDR:=temp}
+          external-dns.alpha.kubernetes.io/hostname: mc.${SECRET_DOMAIN}
