--- a/kubernetes/main/apps/games/minecraft/create/helmrelease.yaml
+++ b/kubernetes/main/apps/games/minecraft/create/helmrelease.yaml
@@ -73,7 +73,7 @@ spec:
         enabled: true
         existingClaim: *app
     serviceAnnotations:
-      mc-router.itzg.me/externalServerName: create.${SECRET_DOMAIN}
+      mc-router.itzg.me/externalServerName: &host create.${SECRET_DOMAIN}
     minecraftServer:
       eula: true
       version: "1.20.1"
@@ -108,7 +108,13 @@ spec:
           type: ClusterIP
           port: 9225
         ingress:
-          enabled: false
+          ingressClassName: external
+          enabled: true
+          annotations:
+            external-dns.alpha.kubernetes.io/target: mc.${SECRET_DOMAIN}
+            external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
+          hosts:
+           - name: *host
   valuesFrom:
   - kind: Secret
     name: minecraft-create-secret
