--- a/kubernetes/main/apps/games/minecraft/mc-router/dnsendpoint.yaml
+++ b/kubernetes/main/apps/games/minecraft/mc-router/dnsendpoint.yaml
@@ -4,10 +4,11 @@ apiVersion: externaldns.k8s.io/v1alpha1
 kind: DNSEndpoint
 metadata:
   name: mc-router
-  annotations:
-    external-dns.alpha.kubernetes.io/cloudflare-proxied: "disabled"
 spec:
   endpoints:
     - dnsName: "mc.${SECRET_DOMAIN}"
       recordType: CNAME
       targets: ["ipv4.${SECRET_DOMAIN}"]
+      providerSpecific:
+        - name: external-dns.alpha.kubernetes.io/cloudflare-proxied
+          value: 'false'
