--- a/kubernetes/main/apps/games/minecraft/vibecraft/helmrelease.yaml
+++ b/kubernetes/main/apps/games/minecraft/vibecraft/helmrelease.yaml
@@ -81,7 +81,7 @@ spec:
       #     subPath: config.yml
       #     readOnly: true
     serviceAnnotations:
-      mc-router.itzg.me/externalServerName: vibecraft.${SECRET_DOMAIN}
+      mc-router.itzg.me/externalServerName: &host vibecraft.${SECRET_DOMAIN}
     minecraftServer:
       eula: true
       version: "1.21"
@@ -114,7 +114,13 @@ spec:
           type: ClusterIP
           port: 9225
         ingress:
-          enabled: false
+          ingressClassName: external
+          enabled: true
+          annotations:
+            external-dns.alpha.kubernetes.io/target: mc.${SECRET_DOMAIN}
+            external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
+          hosts:
+           - name: *host
   valuesFrom:
   - kind: Secret
     name: minecraft-vibecraft-secret
