--- a/kubernetes/main/apps/games/palworld/app/dnsendpoint.yaml
+++ b/kubernetes/main/apps/games/palworld/app/dnsendpoint.yaml
@@ -3,12 +3,12 @@
 apiVersion: externaldns.k8s.io/v1alpha1
 kind: DNSEndpoint
 metadata:
-  name: takocraft
+  name: palworld
 spec:
   endpoints:
-    - dnsName: "takocraft.${SECRET_DOMAIN}"
+    - dnsName: "palworld.${SECRET_DOMAIN}"
       recordType: CNAME
-      targets: ["mc.${SECRET_DOMAIN}"]
+      targets: ["ipv4.${SECRET_DOMAIN}"]
       providerSpecific:
         - name: external-dns.alpha.kubernetes.io/cloudflare-proxied
           value: 'false'
