--- a/kubernetes/main/apps/games/palworld/app/helmrelease.yaml
+++ b/kubernetes/main/apps/games/palworld/app/helmrelease.yaml
@@ -128,7 +128,7 @@ spec:
         enabled: false #nginx doesn't support non-https
         className: external
         annotations:
-          external-dns.alpha.kubernetes.io/target: ipv4.${SECONDARY_DOMAIN}
+          external-dns.alpha.kubernetes.io/target: ipv4.${SECRET_DOMAIN}
         hosts:
         - host: "{{ .Release.Name }}.${SECRET_DOMAIN}"
           paths:
