feat: update palworld url

--- a/kubernetes/main/apps/games/palworld/app/helmrelease.yaml
+++ b/kubernetes/main/apps/games/palworld/app/helmrelease.yaml
@@ -57,7 +57,7 @@ spec:
               PUBLIC_PORT: &port 8211
               RCON_ENABLED: true
               RCON_PORT: &rcon-port 25575
-              PUBLIC_IP: pal.${SECONDARY_DOMAIN}
+              PUBLIC_IP: palworld.${SECRET_DOMAIN}
               ## Webhook Settings
               WEBHOOK_ENABLED: true
             envFrom:
