--- a/kubernetes/main/bootstrap/helmfile.yaml
+++ b/kubernetes/main/bootstrap/helmfile.yaml
@@ -21,22 +21,22 @@ releases:
     namespace: kube-system
     chart: cilium/cilium
     version: 1.16.1
-    values: ["../../../apps/kube-system/cilium/app/helm-values.yaml"]
+    values: ["../apps/kube-system/cilium/app/helm-values.yaml"]
   - name: coredns
     namespace: kube-system
     chart: coredns/coredns
     version: 1.32.0
-    values: ["../../../apps/kube-system/coredns/app/helm-values.yaml"]
+    values: ["../apps/kube-system/coredns/app/helm-values.yaml"]
     needs: ["cilium"]
   - name: kubelet-csr-approver
     namespace: kube-system
     chart: postfinance/kubelet-csr-approver
     version: 1.2.2
-    values: ["../../../apps/kube-system/kubelet-csr-approver/app/helm-values.yaml"]
+    values: ["../apps/kube-system/kubelet-csr-approver/app/helm-values.yaml"]
     needs: ["cilium", "coredns"]
   - name: spegel
     namespace: kube-tools
     chart: oci://ghcr.io/spegel-org/helm-charts/spegel
     version: v0.0.24
-    values: ["../../../apps/kube-tools/spegel/app/helm-values.yaml"]
+    values: ["../apps/kube-tools/spegel/app/helm-values.yaml"]
     needs: ["kube-system/cilium", "kube-system/coredns", "kube-system/kubelet-csr-approver"]
