--- a/kubernetes/utility/bootstrap/helmfile.yaml
+++ b/kubernetes/utility/bootstrap/helmfile.yaml
@@ -21,16 +21,16 @@ releases:
     namespace: kube-system
     chart: cilium/cilium
     version: 1.16.1
-    values: ["../../../apps/kube-system/cilium/app/helm-values.yaml"]
+    values: ["../apps/kube-system/cilium/app/helm-values.yaml"]
   - name: coredns
     namespace: kube-system
     chart: coredns/coredns
     version: 1.32.0
-    values: ["../../../apps/kube-system/coredns/app/helm-values.yaml"]
+    values: ["../apps/kube-system/coredns/app/helm-values.yaml"]
     needs: ["cilium"]
   - name: kubelet-csr-approver
     namespace: kube-system
     chart: postfinance/kubelet-csr-approver
     version: 1.2.2
-    values: ["../../../apps/kube-system/kubelet-csr-approver/app/helm-values.yaml"]
+    values: ["../apps/kube-system/kubelet-csr-approver/app/helm-values.yaml"]
     needs: ["cilium", "coredns"]
