feat: what does this break on an AMD node

--- a/kubernetes/utility/apps/kube-tools/kustomization.yaml
+++ b/kubernetes/utility/apps/kube-tools/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
   # Flux-Kustomizations
-  # - ./fstrim/ks.yaml
+  - ./fstrim/ks.yaml
   - ./node-feature-discovery/ks.yaml
   # - ./powertune/ks.yaml
   - ./reloader/ks.yaml
