--- a/kubernetes/utility/apps/home-automation/kustomization.yaml
+++ b/kubernetes/utility/apps/home-automation/kustomization.yaml
@@ -9,4 +9,4 @@ resources:
   - ./home-assistant/ks.yaml
   - ./mosquitto/ks.yaml
   - ./rtlamr2mqtt/ks.yaml
-  - ./zigbee2mqtt/ks.yaml
+  # - ./zigbee2mqtt/ks.yaml
