--- a/kubernetes/utility/apps/network/kustomization.yaml
+++ b/kubernetes/utility/apps/network/kustomization.yaml
@@ -10,4 +10,5 @@ resources:
   - ./cloudflared/ks.yaml
   - ./echo-server/ks.yaml
   - ./external-dns/ks.yaml
+  - ./headscale/ks.yaml
   - ./nginx/ks.yaml
