--- a/kubernetes/utility/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/utility/flux/repositories/helm/kustomization.yaml
@@ -25,4 +25,5 @@ resources:
   - ./prometheus-community.yaml
   - ./spegel.yaml
   - ./stakater.yaml
+  - ./tofu-controller.yaml
   - ./weave-gitops.yaml
