--- a/kubernetes/utility/apps/flux-system/tofu-controller/app/kustomization.yaml
+++ b/kubernetes/utility/apps/flux-system/tofu-controller/app/kustomization.yaml
@@ -3,8 +3,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./namespace.yaml
-  - ./addons/ks.yaml
-  - ./clickops/ks.yaml
-  # - ./tofu-controller/ks.yaml
-  - ./weave-gitops/ks.yaml
+  - ./externalsecret.yaml
+  - ./helmrelease.yaml
+  - ./secret.sops.yaml
