--- a/kubernetes/utility/apps/flux-system/tofu-controller/terraform/kustomization.yaml
+++ b/kubernetes/utility/apps/flux-system/tofu-controller/terraform/kustomization.yaml
@@ -1,10 +1,7 @@
----
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./namespace.yaml
-  - ./addons/ks.yaml
-  - ./clickops/ks.yaml
-  # - ./tofu-controller/ks.yaml
-  - ./weave-gitops/ks.yaml
+- ./authentik.yaml
+# - ./minio.yaml
+- ./ocirepository.yaml
