--- a/kubernetes/utility/apps/network/headscale/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/network/headscale/app/helmrelease.yaml
@@ -80,11 +80,11 @@ spec:
         annotations:
           external-dns.alpha.kubernetes.io/target: internal-utility.${SECRET_DOMAIN}
         hosts:
-          - host: "{{ .Release.Name }}.${SECRET_DOMAIN}"
+          - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
             paths:
               - path: /
                 service:
-                  identifier: app
+                  identifier: *app
                   port: http
               - path: /web
                 service:
