--- a/kubernetes/utility/apps/network/headscale/app/kustomization.yaml
+++ b/kubernetes/utility/apps/network/headscale/app/kustomization.yaml
@@ -3,8 +3,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./namespace.yaml
-  - ./addons/ks.yaml
-  - ./clickops/ks.yaml
-  # - ./tofu-controller/ks.yaml
-  - ./weave-gitops/ks.yaml
+  - ./externalsecret.yaml
+  - ./helmrelease.yaml
+  - ../../../../templates/gatus/external
+  - ../../../../templates/volsync
