--- a/kubernetes/utility/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/utility/flux/vars/cluster-secrets.sops.yaml
@@ -5,18 +5,22 @@ metadata:
     namespace: flux-system
 stringData:
     #ENC[AES256_GCM,data:xxnbfu67wgLvZ0PqTcNN0Q==,iv:LasA5aqx6l471zjQEEVJuPHGUWr+meE1DKMask3+Zb4=,tag:hgtvtQXcoMaInOpBa++mgw==,type:comment]
+    K8S_GW: ENC[AES256_GCM,data:kxtISRLZtKLTt6A=,iv:y/0Z1wIIXDWgmHhDma2kAbG84vtPZ2jo0fYrkWhzyGc=,tag:+fRtwYCZ7gGvCi1mp3aRSQ==,type:str]
+    BITWARDEN_ORG: ENC[AES256_GCM,data:5u4Le2guO0MTVc7qkJ77755m+jm3O5FDwy6XFLhkJygoYG+2,iv:0h0ZY0HDuGMqWn7no4jGTGW6mxQX7QvQBHi43SpbtE0=,tag:grboQ859LTEgChqqaYHEUg==,type:str]
+    BITWARDEN_PROJ: ENC[AES256_GCM,data:bLV730WwwnWDRvDboKhwmZB36vx7LEMS1axFX3Bk/E8e8svq,iv:yRgRm2/HAiszh2kgz5RPCBBs7KOW123GtWi1fsDu+24=,tag:95jxLHI4JHJ5rrKjlu+kvA==,type:str]
     SECRET_DOMAIN: ENC[AES256_GCM,data:Sztn9a9HEIs=,iv:RGf039nYAKBxuLPUNoeYExqQTADZpbgwDlrGrEFaO6Q=,tag:fn24DtiZKd+TILHIMGJ4YQ==,type:str]
     SECRET_ACME_EMAIL: ENC[AES256_GCM,data:olHOkyyRYoJsPRX3Rw==,iv:odKhYForOw05FJ2gxuleIpXFEDLBCiFpI5F5QZjZIvk=,tag:ypV4xi3YGbKjGu+sezpmHQ==,type:str]
     SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:T1MjNF1zdwsI1LpTkKsJADovUXCsHoKTI3sYcvoJOy01ZmpY,iv:utn/W/euk6A3GdPEaLaH4sWw7qKydHgnuIXkIk2CcMs=,tag:xyad2JjnpzNzyPTAIwvRrA==,type:str]
     SVC_BLOCKY_ADDR: ENC[AES256_GCM,data:TaJSxOq908i/,iv:BO5bQLfdjOBr/8ikdjnnOpEUeUvAKmVpKoULbGfnj8w=,tag:mLIO5iy7ADHr76RXowPVsw==,type:str]
-    K8S_GW: ENC[AES256_GCM,data:kxtISRLZtKLTt6A=,iv:y/0Z1wIIXDWgmHhDma2kAbG84vtPZ2jo0fYrkWhzyGc=,tag:+fRtwYCZ7gGvCi1mp3aRSQ==,type:str]
     SVC_NGINX_INTERNAL: ENC[AES256_GCM,data:ilfw6QhaTh0U7UU=,iv:eJ7/LGu8IZZjWJvDcl0DCAiavC8gf0gO8MTyQ04q3Ck=,tag:Feg8UOuivAv2gyeSh4OuCA==,type:str]
     SVC_NGINX_EXTERNAL: ENC[AES256_GCM,data:EEnrrSfroxhmdK0=,iv:A2CoFRYWGqyWYD/825xZ62Ppl9Rd1fAdDTC1iIoCFEE=,tag:DBn3cz0JIFxlbQILnLoegw==,type:str]
     SVC_HOME_ASSISTANT_ADDR: ENC[AES256_GCM,data:KlS7OuwdThCf8qg=,iv:Tv51Qc+2q2jmm83YfpKwcqJCOVap9WACE7yTrpvr9h0=,tag:Sk7GdOaHC9NORZIGsxlCxg==,type:str]
     SVC_MQTT_ADDR: ENC[AES256_GCM,data:JLe9yBBRNm4rQ3Y=,iv:35bLdpiBgXNeWPMYpAY6ehGBQVeZh3HZpMMyzXeqq0I=,tag:AaH6B2ycs0ZZARXGaYuu+g==,type:str]
     SVC_NUT_ADDR: ENC[AES256_GCM,data:tEIaufwqT5HKSxM=,iv:xhDAE0DVNBUDj/DemkUNiid6qP6tCZF/SsAXtUDO+tw=,tag:IikhIvRi5MsWZPKJYpXAig==,type:str]
-    BITWARDEN_ORG: ENC[AES256_GCM,data:5u4Le2guO0MTVc7qkJ77755m+jm3O5FDwy6XFLhkJygoYG+2,iv:0h0ZY0HDuGMqWn7no4jGTGW6mxQX7QvQBHi43SpbtE0=,tag:grboQ859LTEgChqqaYHEUg==,type:str]
-    BITWARDEN_PROJ: ENC[AES256_GCM,data:bLV730WwwnWDRvDboKhwmZB36vx7LEMS1axFX3Bk/E8e8svq,iv:yRgRm2/HAiszh2kgz5RPCBBs7KOW123GtWi1fsDu+24=,tag:95jxLHI4JHJ5rrKjlu+kvA==,type:str]
+    TAILNET_PUBLIC_PORT: ENC[AES256_GCM,data:E++iNwI=,iv:2Wf26SBoRZ45iLmB+LgjYNwooi0BkQmcuLNpsZh//r0=,tag:7BY6EZe4xOYlwREt3pzwww==,type:int]
+    SVC_TAILSCALE_ADDR: ENC[AES256_GCM,data:O8m6zwAApPd/,iv:O0y5l0+HcYClufGf/SUSCnL4eurTkxbuYSJ2eKFDUxk=,tag:MEe3XDC/uORC7ExLxR86RQ==,type:str]
+    #ENC[AES256_GCM,data:WjKHI92l3ZdKMCM5,iv:6dmuNxxo3TeNZ2J1tsAC3Op2ZCJjwNQro3XMz3+Smgs=,tag:a6mVn8a4UaVUb8KKW9+kYQ==,type:comment]
+    TRUSTED_LVAN: ENC[AES256_GCM,data:MTo2RhMA1t3pEWaZBtsM,iv:yPS8SNUz7AjRX0ZNLdDXQQI8/bTB/Em3z1iv8VuZWgo=,tag:lYBZZnrq0fr+2Ll3yQsUCQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -32,8 +36,8 @@ sops:
             ZjkzSGxlT1R6VHNHNDVNb3hBVzNVZ3MKMtBhVS0FKr6NWqv9S6mSOhjCDIdO3uNz
             OS9Qh8tX5J/s1ZH6z3/DNLWKonA6mccm1kH7jNQe/+w4ozYxa4me9Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-08-13T15:35:05Z"
-    mac: ENC[AES256_GCM,data:Kin7qh2MllrwtZxfELoXS0mCd0+q5zaKgH1IybeLRvY3WEZFbBd1co+ATCEEA0BGGWqB9WsSgF2cGKMcL5gjXPeYr0275L1Y0SI23RnA+Qa6+N/dSt8zeb0oReKxPcRqT1kNFUrkZ/oHCbfYu03Mzg2vwgNIJ/SmCmc3AVXhxyY=,iv:wPVov4o2dnCvxM6zoeqsVMK8w44m9cqFjjpWoRf00eA=,tag:0uF0E9Yhc2MgYrIIbM4n8Q==,type:str]
+    lastmodified: "2024-09-17T20:01:32Z"
+    mac: ENC[AES256_GCM,data:HmIPQisYdvG3KamesUe6rv8Wqx6HjjMZ1B31kwHzJBtN97CKGI6/hMvHHPzdHtR/kbGjqyFN1lvcZ4CFfQVPDBuGupUWfOKfW2aWVQZEUTWMz+36p+NcGq3ijHQO5rjGhF2O04r8u+BhYtOSn4fOAw9CVGn6ZJHixOrYQ1sYJaM=,iv:XEjyyRL3JNp8YYw8i2DBi8fjY5+8L+drT2+cj9ITgCg=,tag:B4w2WBQdbsJcFLWlvrgXog==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.0
