feat: update owner

--- a/kubernetes/utility/apps/network/headscale/app/externalsecret.yaml
+++ b/kubernetes/utility/apps/network/headscale/app/externalsecret.yaml
@@ -65,7 +65,7 @@ spec:
         policy.json: |
           {
             "tagOwners": {
-              "tag:k8s": ["chk"],
+              "tag:k8s": ["vet"],
             },
             "autoApprovers": {
               "routes": {
