--- a/kubernetes/utility/apps/network/headscale/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/network/headscale/app/helmrelease.yaml
@@ -22,6 +22,9 @@ spec:
     remediation:
       strategy: rollback
       retries: 3
+  dependsOn:
+    - name: longhorn
+      namespace: storage
   values:
     controllers:
       headscale:
