--- a/kubernetes/utility/apps/network/tailscale/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/network/tailscale/app/helmrelease.yaml
@@ -22,6 +22,11 @@ spec:
     remediation:
       strategy: rollback
       retries: 3
+  dependsOn:
+    - name: headscale
+      namespace: network
+    - name: longhorn
+      namespace: storage
   values:
     controllers:
       tailscale:
