--- a/kubernetes/main/bootstrap/talos/talconfig.yaml
+++ b/kubernetes/main/bootstrap/talos/talconfig.yaml
@@ -193,7 +193,7 @@ patches:
           kubernetes:
             disabled: false
           service:
-            disabled: false
+            disabled: true
 
   # Configure kubelet
   - |-
