--- a/kubernetes/main/apps/downloads/recyclarr/app/config/recyclarr.yml
+++ b/kubernetes/main/apps/downloads/recyclarr/app/config/recyclarr.yml
@@ -46,11 +46,18 @@ sonarr:
           - 82d40da2bc6923f41e14394075dd4b03 # No-RlsGroup
           - e1a997ddb54e3ecbfe06341ad323c458 # Obfuscated
           - 06d66ab109d4d2eddb2794d21526d140 # Retags
+        assign_scores_to:
+          - name: WEB-2160p
+          - name: WEB-1080p
+          - name: ANY
+
+      - trash_ids:
           - 1b3994c551cbb92a2c781af061f4ab44 # Scene
         assign_scores_to:
           - name: WEB-2160p
           - name: WEB-1080p
           - name: ANY
+            score: 0
 
      # HDR Formats
       - trash_ids:
@@ -92,9 +99,7 @@ radarr:
 
     quality_profiles:
       - name: SQP-1 (1080p)
-        min_format_score: 10
       - name: SQP-1 (2160p)
-        min_format_score: 10
 
     include:
       - template: radarr-quality-definition-sqp-streaming
@@ -107,7 +112,6 @@ radarr:
 
     custom_formats:
       - trash_ids:
-          # - 9f6cbff8cfe4ebbc1bde14c7b7bec0de # IMAX Enhanced
           - 7a0d1ad358fee9f5b074af3ef3f9d9ef # HALLOWED
           - b6832f586342ef70d9c128d40c07b872 # Bad Dual Groups
           - 90cedc1fea7ea5d11298bebd3d1d3223 # EVO (no WEBDL)
@@ -118,6 +122,13 @@ radarr:
         assign_scores_to:
           - name: SQP-1 (1080p)
           - name: SQP-1 (2160p)
+
+      - trash_ids:
+          - 839bea857ed2c0a8e084f3cbdbd65ecb # x265 (no HDR/DV)
+        assign_scores_to:
+          - name: SQP-1 (1080p)
+          - name: SQP-1 (2160p)
+            score: 0
 
       - trash_ids:
           - 064af5f084a0a24458cc8ecd3220f93f # Uncensored
