fix: update hostname

--- a/kubernetes/utility/apps/network/tailscale/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/network/tailscale/app/helmrelease.yaml
@@ -42,10 +42,7 @@ spec:
               NO_AUTOUPDATE: true
               PORT: &port ${TAILNET_PUBLIC_PORT:=1}
               TS_EXTRA_ARGS: --advertise-exit-node --advertise-tags=tag:k8s --login-server=http://headscale.network:8080
-              TS_HOSTNAME:
-                  valueFrom:
-                    fieldRef:
-                      fieldPath: metadata.name
+              TS_HOSTNAME: tailscale-utility
               TS_ROUTES: ${NODE_CIDR},${TRUSTED_LVAN}
               TS_STATE_DIR: &path /tmp
               TS_TAILSCALED_EXTRA_ARGS: --debug=0.0.0.0:9001
