feat(rss): update list, comment out broken link

--- a/kubernetes/utility/apps/default/rss-forwarder/app/externalsecret.yaml
+++ b/kubernetes/utility/apps/default/rss-forwarder/app/externalsecret.yaml
@@ -14,12 +14,6 @@ spec:
       engineVersion: v2
       data:
         config.toml: |-
-            [feeds.cluster-template]
-            url = "https://github.com/onedr0p/cluster-template/commits/main/.atom"
-            interval = "10m"
-            retry_limit = 5
-            sink.type = "discord"
-            sink.url = "{{ .INFRA_DISCORD_WEBHOOK }}"
             [feeds.onedr0p-containers]
             url = "https://github.com/onedr0p/containers/commits/main/.atom"
             interval = "10m"
@@ -32,12 +26,12 @@ spec:
             retry_limit = 5
             sink.type = "discord"
             sink.url = "{{ .MM_DISCORD_WEBHOOK }}"
-            [feeds.sss]
-            url = "https://seatsafetyswitch.com/rss"
-            interval = "10m"
-            retry_limit = 5
-            sink.type = "discord"
-            sink.url = "{{ .MM_DISCORD_WEBHOOK }}"
+            # [feeds.sss]
+            # url = "https://seatsafetyswitch.com/rss"
+            # interval = "10m"
+            # retry_limit = 5
+            # sink.type = "discord"
+            # sink.url = "{{ .MM_DISCORD_WEBHOOK }}"
             [feeds.carsmakeyoustupid]
             url = "https://carsmakeyoustupid.tumblr.com/rss"
             interval = "10m"
