feat: config lubelog homepage widget

--- a/kubernetes/main/apps/default/homepage/app/externalsecret.yaml
+++ b/kubernetes/main/apps/default/homepage/app/externalsecret.yaml
@@ -26,6 +26,8 @@ spec:
         ## Default
         HOMEPAGE_VAR_HASS_TOKEN: "{{ .HASS_TOKEN }}"
         HOMEPAGE_VAR_PAPERLESS_TOKEN: "{{ .HOMEPAGE_VAR_PAPERLESS_TOKEN }}"
+        HOMEPAGE_VAR_LUBELOG_USERNAME: "{{ .HOMEPAGE_VAR_LUBELOG_USERNAME }}"
+        HOMEPAGE_VAR_LUBELOG_PASSWORD: "{{ .HOMEPAGE_VAR_LUBELOG_PASSWORD }}"
         ## Downloads
         HOMEPAGE_VAR_BAZARR_TOKEN: "{{ .BAZARR_API_KEY }}"
         HOMEPAGE_VAR_KAPOWARR_TOKEN: "{{ .KAPOWARR_API_KEY }}"
@@ -71,6 +73,8 @@ spec:
       key: kavita
   - extract:
       key: komga
+  - extract:
+      key: lubelog
   - extract:
       key: mylar
   - extract:
