--- a/kubernetes/main/apps/default/lubelog/app/helmrelease.yaml
+++ b/kubernetes/main/apps/default/lubelog/app/helmrelease.yaml
@@ -71,6 +71,10 @@ spec:
           gethomepage.dev/name: lubelog
           gethomepage.dev/icon: https://demo.lubelogger.com/defaults/lubelogger_icon_72.png
           gethomepage.dev/description: Car Service Tracking
+          gethomepage.dev/widget.type: lubelogger
+          gethomepage.dev/widget.url: http://lubelog.default:8080
+          gethomepage.dev/widget.username: "{{ `{{HOMEPAGE_VAR_LUBELOG_USERNAME}}` }}"
+          gethomepage.dev/widget.password: "{{ `{{HOMEPAGE_VAR_LUBELOG_PASSWORD}}` }}"
           external-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
         hosts:
           - host: "{{ .Release.Name }}.${SECRET_DOMAIN}"
