--- a/kubernetes/utility/apps/flux-system/capacitor/app/kustomization.yaml
+++ b/kubernetes/utility/apps/flux-system/capacitor/app/kustomization.yaml
@@ -3,9 +3,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  # Pre Flux-Kustomizations
-  - ./namespace.yaml
-  # Flux-Kustomizations
-  - ./capacitor/ks.yaml
-  - ./tofu-controller/ks.yaml
-  - ./weave-gitops/ks.yaml
+  - ./helmrelease.yaml
+  - ./rbac.yaml
+  - ../../../../templates/gatus/guarded
