--- a/kubernetes/utility/apps/flux-system/capacitor/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/flux-system/capacitor/app/helmrelease.yaml
@@ -32,13 +32,15 @@ spec:
           app:
             image:
               repository: ghcr.io/gimlet-io/capacitor
-              tag: v0.4.2@sha256:55e77511d674733708e001f594e7180826de9385e2ed0a34397dc2b9694f378c
+              tag: v0.4.3@sha256:784c7f48bad9f4f9acfc0ed2e15955df63da00bd6884f8dbfc7527ec396bfcee
             resources:
               requests:
                 cpu: 50m
                 memory: 100Mi
+                ephemeral-storage: 1Gi
               limits:
                 memory: 200Mi
+                ephemeral-storage: 2Gi
             securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
