Enable rss forwarder for ass blog

--- a/kubernetes/utility/apps/default/rss-forwarder/app/externalsecret.yaml
+++ b/kubernetes/utility/apps/default/rss-forwarder/app/externalsecret.yaml
@@ -26,12 +26,12 @@ spec:
             retry_limit = 5
             sink.type = "discord"
             sink.url = "{{ .MM_DISCORD_WEBHOOK }}"
-            # [feeds.sss]
-            # url = "https://seatsafetyswitch.com/rss"
-            # interval = "10m"
-            # retry_limit = 5
-            # sink.type = "discord"
-            # sink.url = "{{ .MM_DISCORD_WEBHOOK }}"
+            [feeds.sss]
+            url = "https://seatsafetyswitch.com/rss"
+            interval = "10m"
+            retry_limit = 5
+            sink.type = "discord"
+            sink.url = "{{ .MM_DISCORD_WEBHOOK }}"
             [feeds.carsmakeyoustupid]
             url = "https://carsmakeyoustupid.tumblr.com/rss"
             interval = "10m"
