feat: disable probes for qbit

--- a/kubernetes/main/apps/downloads/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/qbittorrent/app/helmrelease.yaml
@@ -50,7 +50,7 @@ spec:
               QBT_Preferences__WebUI__LocalHostAuth: false
             probes:
               liveness: &probes
-                enabled: true
+                enabled: false
                 custom: true
                 spec:
                   httpGet:
@@ -62,7 +62,7 @@ spec:
                   failureThreshold: 6
               readiness: *probes
               startup:
-                enabled: true
+                enabled: false
                 spec:
                   failureThreshold: 30
                   periodSeconds: 10
