chore(cilium): bump annotation to new style

--- a/kubernetes/utility/apps/network/blocky/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/network/blocky/app/helmrelease.yaml
@@ -83,7 +83,7 @@ spec:
         controller: *app
         type: LoadBalancer
         annotations:
-          io.cilium/lb-ipam-ips: ${SVC_BLOCKY_ADDR:=temp}
+          lbipam.cilium.io/ips: ${SVC_BLOCKY_ADDR:=temp}
         ports:
           dns-tcp:
             port: *port
