--- a/kubernetes/utility/apps/network/tailscale/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/network/tailscale/app/helmrelease.yaml
@@ -98,7 +98,7 @@ spec:
         controller: *app
         type: LoadBalancer
         annotations:
-          io.cilium/lb-ipam-ips: ${SVC_TAILSCALE_ADDR:=temp}
+          lbipam.cilium.io/ips: ${SVC_TAILSCALE_ADDR:=temp}
         externalTrafficPolicy: Cluster
         ports:
           tailnet:
