--- a/kubernetes/main/apps/downloads/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/qbittorrent/app/helmrelease.yaml
@@ -92,7 +92,7 @@ spec:
         controller: *app
         type: LoadBalancer
         annotations:
-          io.cilium/lb-ipam-ips: ${SVC_QBITTTORENT_ADDR:=temp}
+          lbipam.cilium.io/ips: ${SVC_QBITTTORENT_ADDR:=temp}
         ports:
           bittorrent:
             enabled: true
