--- a/kubernetes/main/apps/media/plex/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/plex/app/helmrelease.yaml
@@ -101,7 +101,7 @@ spec:
         controller: *app
         type: LoadBalancer
         annotations:
-          io.cilium/lb-ipam-ips: ${SVC_PLEX_ADDR:=temp}
+          lbipam.cilium.io/ips: ${SVC_PLEX_ADDR:=temp}
         ports:
           http:
             port: 32400
