--- a/kubernetes/main/apps/network/nginx/internal/helmrelease.yaml
+++ b/kubernetes/main/apps/network/nginx/internal/helmrelease.yaml
@@ -30,7 +30,7 @@ spec:
       service:
         annotations:
           external-dns.alpha.kubernetes.io/hostname: internal.${SECRET_DOMAIN}
-          io.cilium/lb-ipam-ips: ${SVC_NGINX_INTERNAL:=temp}
+          lbipam.cilium.io/ips: ${SVC_NGINX_INTERNAL:=temp}
         externalTrafficPolicy: Cluster
       ingressClassResource:
         name: internal
