--- a/kubernetes/utility/apps/home-automation/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/home-automation/home-assistant/app/helmrelease.yaml
@@ -78,7 +78,7 @@ spec:
         nameOverride: *app
         type: LoadBalancer
         annotations:
-          io.cilium/lb-ipam-ips: ${SVC_HOME_ASSISTANT_ADDR:=temp}
+          lbipam.cilium.io/ips: ${SVC_HOME_ASSISTANT_ADDR:=temp}
         ports:
           http:
             port: 8123
