--- a/kubernetes/utility/apps/flux-system/tofu-controller/app/secret.sops.yaml
+++ b/kubernetes/utility/apps/flux-system/tofu-controller/app/secret.sops.yaml
@@ -8,7 +8,7 @@ stringData:
     bw_client_id: ENC[AES256_GCM,data:VpoecxZXUysK5ocT0peiWp/HUyce5iVLx/UDGFhxN+k9xPJWgOWRd9M=,iv:tubgCeElJRK7KsDpEhdGGtxzjf9+CHyHC2SqW6ajWSw=,tag:rKsIvMj9Rg+SPFmgOkqXTA==,type:str]
     bw_client_secret: ENC[AES256_GCM,data:JUlgJL6nDdOCrF2l1spBj4n3eAguizCB9yhSTaBg,iv:bYLojhl/Or6lBFs0aPdfhkIPc4Lnr5eDLxoBQLRULaA=,tag:cYrK5Nxq6ZoiCKPuaLSFww==,type:str]
     bw_email: ENC[AES256_GCM,data:vl3aRwsTs6e6icvXIFseptniDxVpiBY=,iv:X9pdGWrQqlXNsZF73Ti84HyhaBTzG+OFRtKD21TFZ0g=,tag:Zv+spTkN4u5aB2aB1mqJnw==,type:str]
-    minio_url: ENC[AES256_GCM,data:e4aeJ+Y27N+XL2x+X8TYiMFKF+L9iA==,iv:BYS/Kg/Rq9eD3iqjALM92fQeHpNfnjq5sNFfagqmeMg=,tag:9v9UgMpljSM+77TUMBEMzw==,type:str]
+    minio_url: ENC[AES256_GCM,data:Cz/GB8HQtxz444g=,iv:ok0B4L5KfqJop/yyGCg6Z8/Yi3R13+TGgp4Q/5d+EdU=,tag:dlymg0q55lPZ/3mEY8HiGg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -24,8 +24,8 @@ sops:
             KzRDbWFsVEpsalByQ1pKL2VsbHZuaTQKKQ+Ia4b12/kVhKvypUlf/riQuTQFh9zy
             T/Lp0g6o1eW7KoE+tFk9QgPGYLphyXn/iVNWpz+bMTXhcgFL0qTQZA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-04-09T17:05:10Z"
-    mac: ENC[AES256_GCM,data:rplvbUUHOJuTFEYdnByTcq7d2VYlmiCP6l/ELv8qut0U8urB8wkTmyAY94zI2jBs9RSu5oYS3SeJsIZXE12qgbYtvP6O4bVeEc5/LTlJ9PO5f4bvk7TOTcTTPKV3Zg22HBHRu66B8kZOO1n+RvP41pZqjWnTTCDzULagOX5ejLI=,iv:wq0hevmYNrX9qPBHwFgg1cgm2Wr+iDU0XkilaKRslYs=,tag:o17KAQXCh21sd1liiG+5HA==,type:str]
+    lastmodified: "2024-10-01T14:46:56Z"
+    mac: ENC[AES256_GCM,data:rkRTX0QVoAqdIXzUtNHRQpOOAfDEWitxQkllv+//wbtys9iVerIlpZ5ovVaYfaJs/1aiZvn6JtA1DoW/opcQwvZZ6joyLvy1oMyhKZAVD/vW5zCW85OxTbKRzuoz7jUKTx82Go/GJMt3JMNaNkCyPeqqtWF4eRllg+yxuYA98t8=,iv:EmfRGoJ5uVyAjnLu4lvKd0MAadIeeZyZbG1v5ttCNSw=,tag:i3EYeUUPHOIiRY2XBm1I6A==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.8.1
+    version: 3.9.0
