--- a/kubernetes/utility/apps/flux-system/tofu-controller/terraform/authentik.yaml
+++ b/kubernetes/utility/apps/flux-system/tofu-controller/terraform/authentik.yaml
@@ -9,10 +9,13 @@ spec:
   backendConfig:
     customConfiguration: |
       backend "s3" {
-        bucket = "terraform-state"
-        key    = "authentik/authentik.tfstate"
-        region                      = "main"
+        bucket   = "terraform-state"
+        key      = "authentik/authentik.tfstate"
+        region   = "main"
+        endpoint = "https://s3.${SECRET_DOMAIN}"
+
         skip_credentials_validation = true
+        skip_requesting_account_id  = true
         skip_metadata_api_check     = true
         skip_region_validation      = true
         force_path_style            = true
