--- a/kubernetes/utility/apps/flux-system/tofu-controller/terraform/minio.yaml
+++ b/kubernetes/utility/apps/flux-system/tofu-controller/terraform/minio.yaml
@@ -5,14 +5,17 @@ metadata:
   name: minio
 spec:
   interval: 12h
-  # approvePlan: auto
+  approvePlan: auto
   backendConfig:
     customConfiguration: |
       backend "s3" {
-        bucket = "terraform-state"
-        key    = "minio/minio.tfstate"
-        region                      = "main"
+        bucket   = "terraform-state"
+        key      = "minio/minio.tfstate"
+        region   = "main"
+        endpoint = "https://s3.${SECRET_DOMAIN}"
+
         skip_credentials_validation = true
+        skip_requesting_account_id  = true
         skip_metadata_api_check     = true
         skip_region_validation      = true
         force_path_style            = true
