feat(qbit): bump limit

--- a/kubernetes/main/apps/downloads/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/qbittorrent/app/helmrelease.yaml
@@ -68,9 +68,9 @@ spec:
             resources:
               requests:
                 cpu: 25m
-                memory: 1G
+                memory: 1Gi
               limits:
-                memory: 4G
+                memory: 6Gi
     defaultPodOptions:
       affinity:
         podAntiAffinity:
