feat(kyoo): update unlogged permissions

--- a/kubernetes/main/apps/media/kyoo/app/configs/config.yaml
+++ b/kubernetes/main/apps/media/kyoo/app/configs/config.yaml
@@ -15,7 +15,7 @@ data:
   # If this is true, new accounts wont have any permissions before you approve them in your admin dashboard.
   REQUIRE_ACCOUNT_VERIFICATION: "true"
   # You can specify this to allow guests users to see your collection without behing able to play videos for example:
-  UNLOGGED_PERMISSIONS: overall.read
+  UNLOGGED_PERMISSIONS: ""
   # Specify permissions of new accounts.
   DEFAULT_PERMISSIONS: overall.read,overall.play
 
