feat: kyoo helm chart

--- a/kubernetes/main/apps/media/kyoo/app-template/kustomization.yaml
+++ b/kubernetes/main/apps/media/kyoo/app-template/kustomization.yaml
@@ -6,5 +6,6 @@ resources:
   - ./externalsecret.yaml
   - ./helmrelease.yaml
   - ./pvc.yaml
+  - ./configs/config.yaml
   - ../../../../templates/gatus/external
   - ../../../../templates/volsync
