--- a/kubernetes/main/apps/media/kyoo/app-template/pvc.yaml
+++ b/kubernetes/main/apps/media/kyoo/app-template/pvc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: media
+  name: kyoo-meilisearch
 spec:
   accessModes:
     - ReadWriteOnce
@@ -14,7 +14,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: transcoder-storage
+  name: kyoo-transcoder-metadata
 spec:
   accessModes:
     - ReadWriteOnce
