--- a/kubernetes/main/apps/media/kyoo/app/externalsecret.yaml
+++ b/kubernetes/main/apps/media/kyoo/app/externalsecret.yaml
@@ -3,7 +3,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: &name kyoo-secret
+  name: &name kyoo-chart-secret
 spec:
   secretStoreRef:
     name: bitwarden-secrets-manager
@@ -15,16 +15,16 @@ spec:
       engineVersion: v2
       data:
         # App
-        KYOO_APIKEYS: '{{ .KYOO_API_KEY }}'
-        THEMOVIEDB_APIKEY: '{{ .TMDB_API_KEY }}'
+        kyoo_apikeys: '{{ .KYOO_API_KEY }}'
+        TMDB_API_KEY: '{{ .TMDB_API_KEY }}'
+        TVDB_APIKEY: ""
+        TVDB_PIN: ""
         #Meili
-        MEILI_HOST: http://kyoo-meilisearch:7700
         MEILI_MASTER_KEY: '{{ .MEILI_MASTER_KEY }}'
         #RabbitMQ
-        RABBITMQ_DEFAULT_USER: kyoo
-        RABBITMQ_PORT: "5672"
-        RABBITMQ_HOST: kyoo-rabbitmq
-        RABBITMQ_DEFAULT_PASS: '{{ .RABBITMQ_PASS }}'
+        RABBITMQ_USER: kyoo
+        RABBITMQ_COOKIE: '{{ RABBITMQ_COOKIE }}'
+        RABBITMQ_PASS: '{{ .RABBITMQ_PASS }}'
         # OIDC
         OIDC_AUTHENTIK_NAME: Authentik
         OIDC_AUTHENTIK_LOGO: https://sso.${SECRET_DOMAIN}/static/dist/assets/icons/icon.png
@@ -32,36 +32,13 @@ spec:
         OIDC_AUTHENTIK_TOKEN: https://sso.${SECRET_DOMAIN}/application/o/token/
         OIDC_AUTHENTIK_PROFILE: https://sso.${SECRET_DOMAIN}/application/o/userinfo/
         OIDC_AUTHENTIK_SCOPE: openid email profile
-        OIDC_AUTHENTIK_CLIENTID: '{{ .KYOO_CLIENT_ID }}'
-        OIDC_AUTHENTIK_SECRET: '{{ .KYOO_CLIENT_SECRET }}'
+        clientId: '{{ .KYOO_CLIENT_ID }}'
+        clientSecret: '{{ .KYOO_CLIENT_SECRET }}'
+        # Postgres
+        POSTGRES_USER: kyoo_all #temp
+        POSTGRES_PASSWORD: watchSomething4me #temp
   dataFrom:
   - extract:
       key: kyoo
   - extract:
       key: kometa
----
-# yaml-language-server: $schema=https://kube-schemas.pages.dev/external-secrets.io/externalsecret_v1beta1.json
-apiVersion: external-secrets.io/v1beta1
-kind: ExternalSecret
-metadata:
-  name: &name kyoo-db-secret
-spec:
-  refreshInterval: 1m
-  secretStoreRef:
-    name: crunchy-pgo-secrets
-    kind: ClusterSecretStore
-  target:
-    name: kyoo-secret
-    creationPolicy: Merge
-    deletionPolicy: Retain
-    template:
-      type: Opaque
-      data:
-        POSTGRES_DB: '{{ .dbname }}'
-        POSTGRES_SERVER: '{{ index . "pgbouncer-host" }}'
-        POSTGRES_PORT: '{{ .port }}'
-        POSTGRES_USER: '{{ .user }}'
-        POSTGRES_PASSWORD: '{{ .password }}'
-  dataFrom:
-  - extract:
-      key: postgres-pguser-kyoo
