--- a/kubernetes/main/apps/media/kyoo/app-template/pvc.yaml
+++ b/kubernetes/main/apps/media/kyoo/app-template/pvc.yaml
@@ -2,19 +2,19 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: media
+  name: kyoo-meilisearch
 spec:
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
       storage: 5Gi
-  storageClassName: ceph-filesystem
+  storageClassName: ceph-block
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: transcoder-storage
+  name: kyoo-transcoder-metadata
 spec:
   accessModes:
     - ReadWriteOnce
