--- a/kubernetes/main/apps/cert-manager/cert-manager/app/helmrelease.yaml
+++ b/kubernetes/main/apps/cert-manager/cert-manager/app/helmrelease.yaml
@@ -24,7 +24,8 @@ spec:
       retries: 3
   values:
     replicaCount: 2
-    installCRDs: true
+    crds:
+      enabled: true
     dns01RecursiveNameservers: https://1.1.1.1:443/dns-query,https://1.0.0.1:443/dns-query
     dns01RecursiveNameserversOnly: true
     prometheus:
