--- a/kubernetes/main/apps/kube-tools/spegel/app/helm-values.yaml
+++ b/kubernetes/main/apps/kube-tools/spegel/app/helm-values.yaml
@@ -2,7 +2,8 @@
 ## TODO: Remove hack image when https://github.com/spegel-org/spegel/pull/581 is merged
 image:
   repository: ghcr.io/deedee-ops/spegel
-  digest: sha256:267dc3b79750dfca9a961be1f6f9b39997e598f6ee4b2cac7a98641d163a7a78
+  tag: 0.0.24
+  digest: ""
 spegel:
   appendMirrors: true
   containerdSock: /run/containerd/containerd.sock
