--- a/kubernetes/main/apps/media/tautulli/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/tautulli/app/helmrelease.yaml
@@ -35,16 +35,11 @@ spec:
         containers:
           app:
             image:
-              repository: ghcr.io/tautulli/tautulli
-              tag: v2.14.5@sha256:6017b491d8e9100a97391b639fff5824ad36a315c69aae3c9ed78407994a626e
+              repository: ghcr.io/joryirving/tautulli
+              tag: v2.14.5@sha256:629062e024de78a7c7ca9758ac17f15ab95c936802c3619382b1ce331bc12375
             env:
               TZ: ${TIMEZONE}
-            command: ["/usr/local/bin/python", "Tautulli.py"]
-            args: [
-              "--config", "/config/config.ini",
-              "--datadir", "/config",
-              "--port", "80"
-            ]
+            args: ["/entrypoint.sh", "--port", "80"]
             probes:
               liveness: &probes
                 enabled: true
